[package]
name = "aws-cloudwatch"
version = "0.0.1"
include = ["/src"]
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tree-sitter = "0.20.4"
futures = "0.3" # Used for extra utility functions over futures that tokio doesn't have

# SDK
aws-sdk-cloudwatchlogs = "0.6.0"
aws-config = "0.6.0"


# Generated deps !!!!
toolkits = { path = "../../build/smithyprojections/software.amazon.smithy.rust.codegen.toolkits/source/rust-codegen" }

[build-dependencies]
cc = "1.0" # for tree-sitter
