[package]
name = "aws-ec2" # TODO: these all need to be renamed or something
version = "0.0.1"
include = ["/src"]
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SDK
aws-sdk-ec2 = "0.6.0"
aws-config = "0.6.0"

# Internal
aws-flow = { path = "../flow" }
aws-core = { path = "../core" }

# Async
async-trait = "0.1.52"

# Generated deps !!!!
toolkits = { path = "../../build/smithyprojections/software.amazon.smithy.rust.codegen.toolkits/source/rust-codegen" }