[package]
name = "aws-flow"
version = "0.0.1"
include = ["/src"]
edition = "2021"

[dependencies]
tokio = { version = "1.16.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Generated deps !!!!
toolkits = { path = "../../build/smithyprojections/software.amazon.smithy.rust.codegen.toolkits/source/rust-codegen" }