[package]
name = "aws-smithy-server"
version = "0.0.0-smithy-rs-head"
authors = ["AWS Rust SDK Team <aws-sdk-rust@amazon.com>", "John DiSanti <jdisanti@amazon.com>"]
description = "Token streaming JSON parser for smithy-rs."
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/awslabs/smithy-rs"

[dependencies]
tower = "0.4.11"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
# End of docs.rs metadata
